--- a/index.html
+++ b/index.html
@@ -232,7 +232,8 @@
         </section>
 
         <!-- ===== CALL TO ACTION SECTION ===== -->
-        <section class="min-h-[70vh] bg-cover bg-center bg-fixed flex items-center justify-center p-8 bg-gray-500" style="background-image: url('img/girl_bg.png')">
+        <!-- ИЗМЕНЕНИЕ: Класс 'bg-fixed' заменен на 'md:bg-fixed', чтобы исправить отображение на мобильных устройствах -->
+        <section class="min-h-[70vh] bg-cover bg-center md:bg-fixed flex items-center justify-center p-8 bg-gray-500" style="background-image: url('img/girl_bg.png')">
             <div class="text-center max-w-3xl text-white bg-black/30 backdrop-blur-sm p-8 rounded-lg">
                 <h2 class="font-heading text-4xl md:text-6xl leading-tight font-semibold">Безграничная любовь к детям и высокий профессионализм — залог нашего успеха</h2>
                 <a href="#admissions" class="mt-8 inline-block py-3 px-10 border border-white rounded-md hover:bg-white hover:text-brand-dark-green transition-all duration-300 text-lg">
